@@ -1,10 +1,11 @@
 [Desktop Entry]
+Encoding=UTF-8
 _Name=gLabels Label Designer
-_Comment=Create labels, business cards and media covers.
+_Comment=Create labels, business cards and media covers
 Exec=glabels %F
 Icon=glabels/glabels-icon.png
-Terminal=0
+Terminal=false
 Type=Application
-Categories=GNOME;Application;Office
+Categories=GNOME;Application;Office;
 StartupNotify=true
 MimeType=application/x-glabels;
